--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,23 @@
 language: node_js
-node_js: 10
+node_js:
+  - '10'
 
-cache: npm
+cache:
+  directories:
+    - node_modules
 
-script: npm run build
+# S: Build Lifecycle
+install:
+  - npm install
 
-deploy:
-provider: pages
-skip_cleanup: true
-local_dir: dist
+before_script:
+
+script:
+  - npm run build
+
+branches:
+only:
+  - master
+
 notifications:
   email: false
-on:
-  branch: master
