--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,14 @@ script:
   - npm run build
 
 after_script:
-  - cd ./dist
 
-branches:
-  only:
-    - master
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  keep_history: true
+  on:
+    branch: master
 
 notifications:
   email: false
