--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,21 @@
 language: node_js
 node_js:
-  - '10'
+  - 'node'
 
-cache:
-  directories:
-    - node_modules
+cache: npm
 
 # S: Build Lifecycle
 install:
   - npm install
 
-before_script:
-
-script:
-  - npm run build
-
-after_script:
+script: npm run build
 
 deploy:
   provider: pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep_history: true
+  local_dir: dist
   on:
     branch: master
 
