--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,13 @@ language: node_js
 node_js:
   - 'node'
 
-cache: npm
+cache:
+  directories:
+    - node_modules #缓存依赖
 
 # S: Build Lifecycle
 install:
-  - npm install
+  - npm i
 
 script: npm run build
 
@@ -16,7 +18,7 @@ deploy:
   github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep_history: true
   local_dir: dist
-  on:
+  only:
     branch: master
 
 notifications:
