--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:stage": "vue-cli-service build --mode staging",
     "test:unit": "jest --clearCache && vue-cli-service test:unit",
     "lint": "eslint --ext .js,.vue src",
-    "lint:fix": "eslint --ext .js,.vue src --fix"
+    "lint:fix": "eslint --ext .js,.vue src --fix",
+    "lint:css": "stylelint **/*.{html,vue,css,sass,scss,less}"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -43,6 +44,12 @@
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
     "script-ext-html-webpack-plugin": "^2.1.5",
+    "stylelint": "^13.12.0",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.3.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.19.0",
+    "stylelint-webpack-plugin": "^2.1.1",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12"
   },
