--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nprogress": "^0.2.0",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
+    "vue-simple-uploader": "^0.7.6",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
