--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 node_modules
 /dist
 
-
 # local env files
 .env.local
 .env.*.local
@@ -13,7 +12,7 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-## 本地配置文件
+# 本地配置文件
 .vscode/launch.json
 
 # 本地缓存文件
