--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.10.1",
     "element-ui": "^2.15.1",
+    "js-cookie": "^2.2.1",
     "nprogress": "^0.2.0",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
@@ -37,12 +38,12 @@
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-dynamic-import-node": "^2.3.3",
-    "eslint": "^7.23.0",
+    "eslint": "^7.24.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.8.0",
     "html-webpack-plugin": "^5.3.1",
     "node-sass": "^5.0.0",
-    "prettier": "^2.2.1",
+    "prettier": "2.2.1",
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
     "script-ext-html-webpack-plugin": "^2.1.5",
