--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.10.1",
     "element-ui": "^2.15.1",
     "js-cookie": "^2.2.1",
+    "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
