--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@vue/cli-plugin-babel": "~4.5.14",
+    "@vue/cli-plugin-eslint": "~4.5.14",
     "@vue/cli-plugin-router": "~4.5.14",
     "@vue/cli-plugin-unit-jest": "^4.5.14",
     "@vue/cli-plugin-vuex": "~4.5.14",
     "@vue/cli-service": "~4.5.14",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/cli-plugin-eslint": "~4.5.14",
     "@vue/test-utils": "^1.2.2",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.3.0",
@@ -43,12 +43,14 @@
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-vue": "^7.19.1",
+    "html-webpack-plugin": "^5.3.1",
     "node-sass": "^6.0.1",
     "prettier": "2.4.1",
     "sass": "^1.43.2",
     "sass-loader": "^10.2.0",
     "script-ext-html-webpack-plugin": "^2.1.5",
     "stylelint": "^13.13.1",
+    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recess-order": "^2.5.0",
     "stylelint-config-sass-guidelines": "^8.0.0",
     "stylelint-config-standard": "^22.0.0",
@@ -56,7 +58,6 @@
     "stylelint-scss": "^3.21.0",
     "stylelint-webpack-plugin": "^2.2.2",
     "svg-sprite-loader": "^6.0.9",
-    "html-webpack-plugin": "^5.3.1",
     "svgo": "^2.7.0",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14"
