--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "core-js": "^3.19.0",
-    "echarts": "^5.2.1",
+    "core-js": "^3.19.1",
+    "echarts": "^5.2.2",
     "element-ui": "^2.15.6",
     "js-cookie": "^3.0.1",
     "normalize.css": "^8.0.1",
@@ -26,14 +26,14 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "@vue/cli-plugin-babel": "~4.5.14",
-    "@vue/cli-plugin-eslint": "~4.5.14",
-    "@vue/cli-plugin-router": "~4.5.14",
-    "@vue/cli-plugin-unit-jest": "^4.5.14",
-    "@vue/cli-plugin-vuex": "~4.5.14",
-    "@vue/cli-service": "~4.5.14",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@vue/cli-plugin-babel": "~4.5.15",
+    "@vue/cli-plugin-eslint": "~4.5.15",
+    "@vue/cli-plugin-router": "~4.5.15",
+    "@vue/cli-plugin-unit-jest": "^4.5.15",
+    "@vue/cli-plugin-vuex": "~4.5.15",
+    "@vue/cli-service": "~4.5.15",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "^1.2.2",
     "babel-eslint": "^10.1.0",
@@ -45,6 +45,8 @@
     "eslint-plugin-vue": "^7.20.0",
     "html-webpack-plugin": "^5.3.1",
     "node-sass": "^6.0.1",
+    "postcss": "^8.3.11",
+    "postcss-html": "^1.2.0",
     "prettier": "2.4.1",
     "sass": "^1.43.4",
     "sass-loader": "^10.2.0",
@@ -52,13 +54,13 @@
     "stylelint": "^14.0.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recess-order": "^2.5.0",
-    "stylelint-config-sass-guidelines": "^8.0.0",
-    "stylelint-config-standard": "^23.0.0",
-    "stylelint-config-standard-scss": "^2.0.0",
+    "stylelint-config-recommended-vue": "^1.0.0",
+    "stylelint-config-sass-guidelines": "^9.0.1",
+    "stylelint-config-standard-scss": "^2.0.1",
     "stylelint-declaration-block-no-ignored-properties": "^2.4.0",
-    "stylelint-webpack-plugin": "^3.0.1",
+    "stylelint-webpack-plugin": "^3.1.0",
     "svg-sprite-loader": "^6.0.11",
-    "svgo": "^2.7.0",
+    "svgo": "^2.8.0",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14"
   },
