--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:unit": "jest --clearCache && vue-cli-service test:unit",
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml",
     "lint": "eslint --ext .js,.vue src",
-    "lint:css": "stylelint **/*.{html,vue,css,sass,scss,less}"
+    "lint:css": "stylelint **/*.{html,vue,css,scss}"
   },
   "dependencies": {
     "axios": "^0.24.0",
@@ -22,7 +22,6 @@
     "nprogress": "^0.2.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
-    "vue-simple-uploader": "^0.7.6",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
