--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,13 +4,13 @@
     "titleBar.activeForeground": "#15202b",
     "titleBar.inactiveBackground": "#42b88399",
     "titleBar.inactiveForeground": "#15202b99",
-    "editorGroup.border": "#65c89b",
-    "panel.border": "#65c89b",
-    "sash.hoverBorder": "#65c89b",
-    "sideBar.border": "#65c89b"
+    "sash.hoverBorder": "#65c89b"
   },
   "peacock.color": "#42b883",
   "css.validate": false,
   "less.validate": false,
-  "scss.validate": false
+  "scss.validate": false,
+  "cSpell.words": [
+    "echarts"
+  ]
 }
