--- a/package.json
+++ b/package.json
@@ -13,21 +13,22 @@
     "lint:css": "stylelint **/*.{html,vue,css,scss}"
   },
   "dependencies": {
-    "axios": "^0.24.0",
-    "core-js": "^3.19.1",
-    "echarts": "^5.2.2",
+    "axios": "^0.26.0",
+    "core-js": "^3.21.1",
+    "echarts": "^5.3.0",
     "element-ui": "^2.15.6",
     "js-cookie": "^3.0.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
+    "regenerator-runtime": "^0.13.9",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/eslint-parser": "^7.16.3",
-    "@babel/preset-env": "^7.16.4",
+    "@babel/core": "^7.17.5",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
     "@vue/cli-plugin-babel": "~4.5.15",
     "@vue/cli-plugin-eslint": "~4.5.15",
     "@vue/cli-plugin-router": "~4.5.15",
@@ -35,23 +36,23 @@
     "@vue/cli-plugin-vuex": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
     "@vue/test-utils": "^1.3.0",
-    "babel-jest": "^27.3.1",
+    "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.3",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "eslint": "^7.32.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.1.1",
+    "eslint-plugin-vue": "^8.4.1",
     "html-webpack-plugin": "^4.5.2",
-    "postcss": "^8.4.4",
+    "postcss": "^8.4.6",
     "postcss-html": "^1.3.0",
-    "prettier": "2.5.0",
-    "sass": "^1.43.5",
-    "sass-loader": "^10.2.0",
+    "prettier": "2.5.1",
+    "sass": "^1.49.7",
+    "sass-loader": "^10.2.1",
     "script-ext-html-webpack-plugin": "^2.1.5",
-    "stylelint": "^14.0.1",
+    "stylelint": "14.5.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recess-order": "^3.0.0",
-    "stylelint-config-recommended-vue": "^1.0.0",
+    "stylelint-config-recommended-vue": "^1.3.0",
     "stylelint-config-sass-guidelines": "^9.0.1",
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
