--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "一个用于学习Vue的项目，使用 Element UI & axios",
   "author": "DSY",
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "build:stage": "vue-cli-service build --mode staging",
     "test:unit": "jest --clearCache && vue-cli-service test:unit",
@@ -13,9 +13,9 @@
     "lint:css": "stylelint **/*.{html,vue,css,scss}"
   },
   "dependencies": {
-    "axios": "^0.26.0",
+    "axios": "^0.26.1",
     "core-js": "^3.21.1",
-    "echarts": "^5.3.0",
+    "echarts": "^5.3.1",
     "element-ui": "^2.15.6",
     "js-cookie": "^3.0.1",
     "normalize.css": "^8.0.1",
@@ -26,33 +26,33 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
+    "@babel/core": "^7.17.8",
     "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
-    "@vue/cli-plugin-babel": "~4.5.15",
-    "@vue/cli-plugin-eslint": "~4.5.15",
-    "@vue/cli-plugin-router": "~4.5.15",
-    "@vue/cli-plugin-unit-jest": "^4.5.15",
-    "@vue/cli-plugin-vuex": "~4.5.15",
-    "@vue/cli-service": "~4.5.15",
+    "@vue/cli-plugin-babel": "~4.5.16",
+    "@vue/cli-plugin-eslint": "~4.5.16",
+    "@vue/cli-plugin-router": "~4.5.16",
+    "@vue/cli-plugin-unit-jest": "^4.5.16",
+    "@vue/cli-plugin-vuex": "~4.5.16",
+    "@vue/cli-service": "~4.5.16",
     "@vue/test-utils": "^1.3.0",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.3",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "eslint": "^7.32.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.4.1",
+    "eslint-plugin-vue": "^8.5.0",
     "html-webpack-plugin": "^4.5.2",
-    "postcss": "^8.4.6",
+    "postcss": "^8.4.12",
     "postcss-html": "^1.3.0",
-    "prettier": "2.5.1",
-    "sass": "^1.49.7",
+    "prettier": "2.6.0",
+    "sass": "^1.49.9",
     "sass-loader": "^10.2.1",
     "script-ext-html-webpack-plugin": "^2.1.5",
-    "stylelint": "14.5.1",
+    "stylelint": "14.6.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recess-order": "^3.0.0",
-    "stylelint-config-recommended-vue": "^1.3.0",
+    "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-sass-guidelines": "^9.0.1",
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
